--- a/css/style-rtl.css
+++ b/css/style-rtl.css
@@ -1,6 +1,13 @@
 /*Css for arabic version*/
+/* modify general requirements for page*/
+.container-rtl{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+    direction: rtl;
+}
 
-
+/* modify for menu*/
 #nav .addational-register a {
     margin-top: 20px;
     padding: 11px 85px;
@@ -30,7 +37,24 @@
     margin-top: 5px;
     font-style: oblique;
 }
-
+/* modify hotel-info page*/
+#sections .section-title {
+    width: 100%;
+    text-align: right;
+    margin-right: 16%;
+}
+#sections .hotel-info h3 {
+    margin-top: 5px;
+    font-size: 1.5em;
+    color: white;
+    text-align: right;
+}
+#sections .section-back {
+    /* width: 84%; */
+    margin-bottom: 30px;
+    text-align: right;
+    margin-right: 16%;
+}
 @media  screen and (min-width:900px) and (max-width: 1500px){
     #form .form-title {
         display: flex;
@@ -61,13 +85,17 @@
         padding: 10px 51px;
     }
     #nav .second-logo {
-        margin-left: 130px;
+        margin-left: 190px;
         margin-top: 35px;
     }
     #nav .nav-top .logo img {
         position: absolute;
-        left: 90px;
-        top: 45px;
+        left: 150px;
+        top: 40px;
+    }
+    #sections .hotel-info {
+        margin-left: 0;
+        margin-right: 110px;
     }
 }
 @media only screen and (max-width: 760px) {
@@ -81,6 +109,10 @@
         font-size: 1.2em;
         text-decoration: none;
         transition: background-color, color 0.3s ease-in;
+    }
+    #sections .hotel-info {
+        margin-left: 0;
+        margin-right: 110px;
     }
 }
 @media only screen and (max-width: 480px){
@@ -123,6 +155,11 @@
         margin-top: 20px;
         margin-bottom: 20px;
     }
+    /* Hotel Info */
+    #sections .hotel-info {
+        margin-left: 0;
+        margin-right: 110px;
+    }
 }
 @media only screen and (max-width: 360px){
     .quote-text p {
@@ -131,5 +168,9 @@
         font-weight: 700;
         margin-top: 20px;
         margin-bottom: 20px;
+    }
+    #sections .hotel-info {
+        margin-left: 0;
+        margin-right: 60px;
     }
 }
