--- a/css/style-rtl.css
+++ b/css/style-rtl.css
@@ -140,6 +140,11 @@ withdraw profit page
     border-radius: 20px;
     direction: rtl;
 }
+#guest .hotel-info {
+    width: 100%;
+    margin-right: 206px;
+    margin-top: 20px;
+}
 @media  screen and (min-width:900px) and (max-width: 1500px){
     #form .form-title {
         display: flex;
@@ -257,6 +262,12 @@ withdraw profit page
         margin-top: 20px;
         text-align: right;
     }
+    #guest .hotel-info {
+        width: 100%;
+        margin-right: 114px;
+        margin-top: 20px;
+        text-align: right;
+    }
 }
 @media only screen and (max-width: 480px){
     #nav-mobile .addational-register {
@@ -334,6 +345,18 @@ withdraw profit page
         text-align: center;
         margin-top: 20px;
     }
+    #guest .section-back {
+        width: 100%;
+        margin-bottom: 30px;
+        text-align: center;
+        margin-right: 0;
+    }
+    #guest .hotel-info {
+        width: 100%;
+        margin-right: 0;
+        text-align: center;
+        margin-top: 20px;
+    }
 }
 @media only screen and (max-width: 360px){
     .quote-text p {
@@ -382,6 +405,18 @@ withdraw profit page
         margin-left: 0 !important;
     }
     #withdraw-profit .hotel-info {
+        width: 100%;
+        margin-right: 0;
+        text-align: center;
+        margin-top: 20px;
+    }
+    #guest .section-back {
+        width: 100%;
+        margin-bottom: 30px;
+        text-align: center;
+        margin-right: 0;
+    }
+    #guest .hotel-info {
         width: 100%;
         margin-right: 0;
         text-align: center;
