--- a/css/style-rtl.css
+++ b/css/style-rtl.css
@@ -150,6 +150,17 @@ withdraw profit page
     margin-right: 206px;
     margin-top: 20px;
 }
+#rtl-direction{
+    width: 90%;
+}
+#rtl-direction table  tr td{
+    direction: rtl;
+}
+#container-rtl .section-title {
+    width: 100%;
+    text-align: right;
+    margin-right: 16%;
+}
 @media  screen and (min-width:900px) and (max-width: 1500px){
     #form .form-title {
         display: flex;
