--- a/css/info/hotel-guest.css
+++ b/css/info/hotel-guest.css
@@ -166,3 +166,12 @@ Media Query for Info
 
 
 }
+@media only screen and (max-width: 360px){
+
+    tr th {
+        font-size: 10px;
+    }
+
+
+
+}
